--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "@actions/github": "^4.0.0",
     "@zeit/ncc": "^0.22.3",
     "common-tags": "^1.8.0",
-    "glob": "^7.1.6",
-    "tslint": "^6.1.3",
-    "typescript": "^4.0.2"
+    "glob": "7.1.6",
+    "tslint": "^6.1.0",
+    "typescript": "4.0.2"
   },
   "devDependencies": {},
   "scripts": {
