update to docker

--- a/action.yml
+++ b/action.yml
@@ -11,5 +11,5 @@ inputs:
     description: "Github token"
     required: true
 runs:
-  using: "node12"
-  main: "dist/index.js"
+  using: 'docker'
+  image: 'Dockerfile'
