--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,5 +15,5 @@ jobs:
         uses: LiamAjones/tslint-repo@master
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          pattern: '**/*.ts'
+          pattern: 'demo/*.ts'
           tslintConfigFile: 'demo/tslint.json'
