--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,5 +13,5 @@ jobs:
         uses: LiamAjones/tslint-repo@master
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          pattern: '*/demo/**/*.ts'
-          tslintConfigFile: 'demo/tslint.json'
+          pattern: '**/demo/*.ts'
+          tslintConfigFile: './demo/tslint.json'
