--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,8 @@
   
 name: workflow
-on: [push]
+on: 
+  pull_request:
+    types: ['opened', 'edited', 'reopened', 'synchronize']
 jobs:
   job:
     runs-on: ubuntu-latest
