--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "tslint": "6.1.3",
     "typescript": "4.0.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "codelyzer": "6.0.0"
+  },
   "scripts": {
     "lint": "ng lint"
   },
