--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@actions/core": "1.2.5",
     "@actions/github": "4.0.0",
+    "@octokit/rest": "^18.0.4",
     "common-tags": "1.8.0",
     "glob": "7.1.6",
     "tslint": "6.1.3",
